Update Python binding with new code organization

--- a/View.ipynb
+++ b/View.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import holoviews as hv\n",
     "import geoviews as gv\n",
-    "import cartograph\n",
+    "import ptolemy\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
     "hv.extension('bokeh')\n",
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "carto = cartograph.Cartography('<PATH HERE>')"
+    "carto = ptolemy.Cartograph('data/brazil.ptolemy')"
    ]
   },
   {
@@ -81,34 +81,6 @@
     "print(len(df))\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = df.groupby('num_nodes').size().to_frame('num_strongly_connected_sub_graphs').reset_index()\n",
-    "count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count['num_strongly_connected_nodes'] = count['num_nodes'] * count['num_strongly_connected_sub_graphs']\n",
-    "count['% nodes'] = count['num_strongly_connected_nodes'] / df['num_nodes'].sum()\n",
-    "count.sort_values('% nodes', ascending=False).head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
