Expose shortest_path to Python

--- a/View.ipynb
+++ b/View.ipynb
@@ -10,6 +10,8 @@
     "import geoviews as gv\n",
     "import ptolemy\n",
     "import numpy as np\n",
+    "import polyline\n",
+    "from datashader.utils import lnglat_to_meters\n",
     "from collections import defaultdict\n",
     "hv.extension('bokeh')\n",
     "from IPython.core.display import display, HTML\n",
@@ -33,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "carto = ptolemy.Cartograph('data/brazil.ptolemy')"
+    "%time carto = ptolemy.Cartograph('data/brazil.ptolemy')"
    ]
   },
   {
@@ -49,7 +51,7 @@
     "def update_path(x_range, y_range):\n",
     "    x_range = x_range or br_x\n",
     "    y_range = y_range or br_y\n",
-    "    edges_by_level = carto.sample_edges((x_range[0], y_range[0]), (x_range[1], y_range[1]), max_edges)\n",
+    "    edges_by_level = carto.sample_edges_wm((x_range[0], y_range[0]), (x_range[1], y_range[1]), max_edges)\n",
     "    \n",
     "    def get_path(level):\n",
     "        return hv.Path(edges_by_level.get(level, [])).opts(line_width=width_by_level[level], line_color=color_by_level[level])\n",
@@ -80,6 +82,30 @@
     "} for s in scc])\n",
     "print(len(df))\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = (-23.134790, -46.559570)\n",
+    "p2 = (-23.110821, -46.555669)\n",
+    "print(carto.shortest_path(p1, p2).distance)\n",
+    "%timeit carto.shortest_path(p1, p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = polyline.decode(carto.shortest_path(p1, p2).geometry)\n",
+    "bg_map * \\\n",
+    "    hv.Path(list(map(ptolemy.Cartograph.web_mercator, path))) * \\\n",
+    "    hv.Points(list(map(ptolemy.Cartograph.web_mercator, [p1, p2]))).opts(size=10)"
    ]
   }
  ],
